--- a/lib/template/simple.html
+++ b/lib/template/simple.html
@@ -16,6 +16,13 @@
             margin:0 auto;
         }
 
+        .markdown-body-wrapper {
+            min-width: 200px;
+            max-width: 790px;
+            margin: 30px auto;
+            padding: 0 30px;
+        }
+
         .markdown-body, .examples, #readme {
             -webkit-text-size-adjust: 100%;
             -ms-text-size-adjust: 100%;
@@ -613,8 +620,10 @@
     </style>
 </head>
 <body>
-<div class="markdown-body">
-    <%= body %>
+<div class="markdown-body-wrapper">
+    <div class="markdown-body">
+        <%= body %>
+    </div>
 </div>
 </body>
 </html>
